<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_user_profile_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.UserProfileActivity">

    <TextView
        android:id="@+id/textView_user_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/user_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="241dp" />

    <ScrollView
        android:id="@+id/scrollView_user_profile_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_user_profile_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <TextView
                android:id="@+id/textView_user_profile_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/editText_user_profile_first_name"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editText_user_profile_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/textView_user_profile_first_name"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/editText_user_profile_last_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_first_name"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView_user_profile_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toEndOf="@+id/textView_user_profile_first_name"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editText_user_profile_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/textView_user_profile_last_name"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toEndOf="@+id/editText_user_profile_first_name"
                app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_last_name"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView_user_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/editText_user_profile_first_name" />

            <EditText
                android:id="@+id/editText_user_profile_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_email"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView_user_profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/label_phone_number"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/editText_user_profile_email" />

            <EditText
                android:id="@+id/editText_user_profile_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_phone"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="395dp" />

            <TextView
                android:id="@+id/textView_user_profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/editText_user_profile_phone" />

            <RadioGroup
                android:id="@+id/radioGroup_user_profile_radioGroup_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_gender">

                <RadioButton
                    android:id="@+id/radioButton_user_profile_gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton_user_profile_gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButton_user_profile_gender_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/other" />
            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@android:string/ok"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup_user_profile_radioGroup_gender" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_profile_title"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>